force-app/main/default/objects/CventEvents__Nomination__c/fields/CventEvents__ApproverComment__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__ApproverComment__c</fullName>
    <description>The most recent approver comment.</description>
    <inlineHelpText>The most recent approver comment.</inlineHelpText>
    <label>Approver Comment</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>