force-app/main/default/objects/CventEvents__Nomination__c/fields/CventEvents__Comment__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__Comment__c</fullName>
    <label>Requester Comment</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>