force-app/main/default/objects/CventEvents__Nomination__c/fields/CventEvents__InvitationConfigurationName__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__InvitationConfigurationName__c</fullName>
    <description>Stores name of configuration to be used for automatic invitation after the nomination gets approved.</description>
    <inlineHelpText>Invitation email/list to be used for automatic invitation after the nomination gets approved.</inlineHelpText>
    <label>Invitation Email/List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>