force-app/main/default/objects/CventEvents__Nomination__c/fields/CventEvents__InvitationConfigurationStub__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__InvitationConfigurationStub__c</fullName>
    <description>Stores configuration stub to be used for automatic invitation after the nomination gets approved.</description>
    <externalId>true</externalId>
    <inlineHelpText>Stores configuration stub to be used for automatic invitation after the nomination gets approved.</inlineHelpText>
    <label>Invitation Configuration Stub</label>
    <length>36</length>
    <type>Text</type>
</CustomField>